travis: fix filenames to validate

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ language:
 before_script:
   - npm install -g ajv-cli
 script:
-  - ajv -s <(echo "{}") -d political.json --all-errors
-  - ajv -s <(echo "{}") -d rails.json --all-errors
-  - ajv -s <(echo "{}") -d settlements.json --all-errors
+  - ajv -s <(echo "{}") -d political.civmap.json --all-errors
+  - ajv -s <(echo "{}") -d rails.civmap.json --all-errors
+  - ajv -s <(echo "{}") -d settlements.civmap.json --all-errors
 cache:
   directories:
     - /home/travis/.nvm/*/lib/node_modules/
