--- a/.github/workflows/area_calculator_civwiki.yml
+++ b/.github/workflows/area_calculator_civwiki.yml
@@ -27,10 +27,14 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
-    - name: Install dependencies
+    - name: Install dependencies and setup environment
+      env:
+        USERNAME: ${{ secrets.CIVWIKIBOT_USERNAME }}
+        PASSWORD: ${{ secrets.CIVWIKIBOT_PASSWORD }}
+        MODE: WIKI
       run: |
         python -m pip install --upgrade pip
         pip install -r scripts/nation_area/requirements.txt
     - name: Run the script
       run: |
-        python3 scripts/nation_area/areaCalculator.py --wiki --username ${{ secrets.CIVWIKIBOT_USERNAME }} --password ${{ secrets.CIVWIKIBOT_PASSWORD }}
+        python3 scripts/nation_area/areaCalculator.py
