made it so it only updates area when pushed to master

--- a/.github/workflows/area_calculator_civwiki.yml
+++ b/.github/workflows/area_calculator_civwiki.yml
@@ -5,6 +5,8 @@ name: Update Area Nations on CivWiki
 
 on:
   push:
+    branches:
+      - master
     paths:
       - land_claims.civmap.json
   workflow_dispatch:
